interface de depart+petite gestion participant

--- a/WebApplication/Views/Home/About.cshtml
+++ b/WebApplication/Views/Home/About.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "À propos";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Ce site web a été confectionné dans le cadre du cours de commerce électronique, un cours qui est dans le programme de bacc en informatique à l'université du Québec à Rimouski. Le but de ce projet était de rendre simple et accessible pour n'importe qui la création de tournoi d'envergure qui se fait encore de manière très fastidueuse. Maintenant les participants n'ont qu'à s'inscrire en ligne où sur place à un poste d'inscription. Mais c'est toute fois qu'un prototype donc on laisse tomber le principe de compte et d'inscription puisque le vrai défi est la création de tournoi.</p>
