--- a/WebApplication/Views/Home/VoirParticipant.cshtml
+++ b/WebApplication/Views/Home/VoirParticipant.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Prenom" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="numero" class="control-label">Numéro : @ViewData["numero"]</label>
-                <input asp-for="numero" class="form-control" />
-                <span asp-validation-for="numero" class="text-danger"></span>
+                <label asp-for="Numero" class="control-label">Numéro : @ViewData["Numero"]</label>
+                <input asp-for="Numero" class="form-control" />
+                <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
