Ajout des participants aux tournois
Et divers autres petits ajouts

--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Tournoi" asp-action="Index">Tournois</a></li>
+                    <li><a asp-area="" asp-controller="Participant" asp-action="Index">Participants</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -43,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - WebApplication</p>
+            <p>&copy; 2018 - E.B & J.B</p>
         </footer>
     </div>
 
