--- a/WebApplication/Views/Tournoi/Create.cshtml
+++ b/WebApplication/Views/Tournoi/Create.cshtml
@@ -4,32 +4,35 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Ajouter un tournoi</h2>
 
-<h4>Tournoi</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-controller="Tournoi" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Nom" class="control-label"></label>
                 <input asp-for="Nom" class="form-control" />
                 <span asp-validation-for="Nom" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="TypeTournoi" class="control-label">Type de tournoi</label>
+                <select asp-for="TypeTournoi" asp-items="ViewBag.TypesTournoi"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info" asp-action="Index">Back to List</a>
 </div>
 
