--- a/WebApplication/Views/Tournoi/Index.cshtml
+++ b/WebApplication/Views/Tournoi/Index.cshtml
@@ -17,7 +17,7 @@
             }
             <tr class="participant">
                 <td>
-                    <a asp-area="" asp-controller="Tournoi" asp-action="Create">Créer votre tournoi</a>
+                    <a asp-area="" asp-controller="Tournoi" asp-action="Create" class="btn btn-success">Créer votre tournoi</a>
                 </td>
             </tr>
         </table>
