--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -106,58 +106,15 @@
 </div -->
 <style>
     .participant:hover {
-        border:solid;
+        border: solid;
     }
 </style>
 <div>
-    <div id="FirstHomeView">
-        il faudra penser à une interface.<br />
-        le caroussel<br />
-        et le gros btn<br />
-        <a class="btn btn-primary" asp-area="" asp-controller="Tournoi" asp-action="Index">Créer votre premier tournoi !</a>
-    </div>
-    <div id="SecondHomeView" hidden>
-        <div class="row">
-            <div class="col-md-4">
-                <form action="">
-                    <input type="radio" name="type" value="RoundRobin"> Round Robin<br>
-                    <input type="radio" name="type" value="SimpleElimination"> Simple Élimination<br>
-                    <input type="radio" name="type" value="DoubleElimination" disabled> Double Élimination
-                </form>
-            </div>
-            <div class="col-md-8" style="height:100px;overflow-y:scroll">
-                <table>
-                    <tr>
-                        <th>Nom Prénom</th>
-                    </tr>
-                    @foreach (WebApplication.Models.Participant participant in ViewData["Participants"] as List<WebApplication.Models.Participant>)
-                    {
-                        <tr><td><a asp-area="" asp-controller="Home" asp-action="VoirParticipant/@participant.Id">@participant.Nom @participant.Prenom</a><td/></tr>
-                    }
-                    <tr class="participant">
-                        <td>
-                            <a asp-area="" asp-controller="Home" asp-action="AddParticipant">Veuillez cliquer ici pour ajouter un participant..</a>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            apercu:
-        </div>
-    </div>
+    <h1>Bienvenue sur le site de création des tournois</h1>
+    <p>
+        Ici, vous allez pouvoir créer vos propres tournois en round robin ou en simple-elimination.
+    </p>
+    <a class="btn btn-primary" asp-area="" asp-controller="Tournoi" asp-action="Index">Créer votre premier tournoi !</a>
+
+
 </div>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $("#createTournement").click(function () {
-            $("#FirstHomeView").hide();
-            $("#SecondHomeView").show();
-        });
-
-        $(".participant").click(function () {
-            
-
-        });
-    });
-    
-</script>
