--- a/WebApplication/Views/Participant/Create.cshtml
+++ b/WebApplication/Views/Participant/Create.cshtml
@@ -28,13 +28,13 @@
                 <span asp-validation-for="Prenom" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input class="btn btn-success" type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-info" asp-action="Index">Back to List</a>
 </div>
 
