--- a/WebApplication/Views/Participant/Details.cshtml
+++ b/WebApplication/Views/Participant/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }, new { @class = "btn btn-warning"}) |
+    <a class="btn btn-info" asp-action="Index">Back to List</a>
 </div>
