--- a/WebApplication/Views/Tournoi/Details.cshtml
+++ b/WebApplication/Views/Tournoi/Details.cshtml
@@ -49,10 +49,10 @@
                 </tr>
             }
         </table>
-        <a class="btn btn-warning" asp-controller="ParticiperTournoi" asp-action="Create" asp-route-id="@ViewData["Id"]">Ajouter un participant</a>
+        <a class="btn btn-success" asp-controller="ParticiperTournoi" asp-action="Create" asp-route-id="@ViewData["Id"]">Ajouter un participant</a>
     </div>
     <div>
-        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }, new { @class = "btn btn-warning"}) |
         <a class="btn btn-info" asp-action="Index">Back to List</a>
     </div>
 </div>
